force-app/main/default/objects/Personal_Objective__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>What is the target deadline?</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>