force-app/main/default/objects/Personal_Objective__c/fields/Objective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Objective_Start_Date__c</fullName>
    <inlineHelpText>When should this objective start?</inlineHelpText>
    <label>Objective Start Date</label>
    <type>Date</type>
</CustomField>