force-app/main/default/objects/Personal_Objective__c/fields/Planning_Period__c.field-meta.xml
<CustomField>
    <fullName>Planning_Period__c</fullName>
    <inlineHelpText>What period is this objective related to?</inlineHelpText>
    <label>Planning Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FH1 2009</fullName>
            </value>
            <value>
                <fullName>FH2 2009</fullName>
            </value>
            <value>
                <fullName>FH1 2010</fullName>
            </value>
            <value>
                <fullName>FH2 2010</fullName>
            </value>
            <value>
                <fullName>FH1 2011</fullName>
            </value>
            <value>
                <fullName>FH2 2011</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>