force-app/main/default/objects/Personal_Objective__c/fields/Related_Company_Objective__c.field-meta.xml
<CustomField>
    <fullName>Related_Company_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which company objective does this Personal Objective support?</description>
    <inlineHelpText>Which Company Objective does this Personal Objective support?</inlineHelpText>
    <label>Related Company Objective</label>
    <referenceTo>Company_Objective__c</referenceTo>
    <relationshipLabel>Personal Objectives</relationshipLabel>
    <relationshipName>Personal_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>