force-app/main/default/objects/Personal_Objective__c/fields/X3__c.field-meta.xml
<CustomField>
    <fullName>X3__c</fullName>
    <description>What do you need from yourself, your team, or another department to succeed?</description>
    <inlineHelpText>What do you need from yourself, your team, or another department to succeed?</inlineHelpText>
    <label>3-month Needs</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>